<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/itemTitle"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_width="fill_parent"
        android:text="@string/frame_home"/>
    <TextView
        android:id="@+id/itemDetail"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_width="fill_parent"
        android:text="@string/frame_plan"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_edit_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_edit_edit"
            android:textSize="14sp"
            style="?android:attr/buttonBarButtonStyle" />

        <Button
            android:id="@+id/btn_edit_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_edit_delete"
            android:textSize="14sp"
            style="?android:attr/buttonBarButtonStyle" />

    </LinearLayout>






</LinearLayout>
