<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@drawable/bg_blue"
    >
    <TextView
        android:id="@+id/homeTextView1"
        style="@android:style/DeviceDefault.Light.ButtonBar"
        android:layout_width="match_parent"
        android:gravity="center"
        android:text="@string/frame_home"
        android:textSize="28sp"
        android:background="@color/theme_blue_two"
        android:layout_height="50dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/div_white"
        android:layout_marginTop="50dp"/>

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="341dp"
        android:layout_height="250dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="110dp"
        android:contentDescription="@string/descript_girl"
        android:src="@drawable/girl" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="380dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_default_1"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@android:color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_default_2"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@android:color/black"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_default_3"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@android:color/black"/>
    </LinearLayout>




</FrameLayout>