<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_blue">


    <TextView
        android:id="@+id/planTextView1"
        style="@android:style/DeviceDefault.Light.ButtonBar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/frame_plan"
        android:textSize="28sp"
        android:background="@color/theme_blue_two"
       />

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="50dp"

        android:background="@color/div_white" />




    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView_check"
            android:layout_width="80dp"
            android:layout_height="80dp"

            android:contentDescription="@string/descript_plan_check"
            android:src="@drawable/plan_2" />

        <Button
            android:id="@+id/button_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/label_plan_check"
            android:background="@drawable/btn_shape"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView_add"
            android:layout_width="80dp"
            android:layout_height="80dp"

            android:contentDescription="@string/descript_plan_edit"
            android:src="@drawable/plan_1" />

        <Button
            android:id="@+id/button_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/label_plan_add"
            android:textSize="18sp"
            android:background="@drawable/btn_shape"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="300dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView_edit"
            android:layout_width="80dp"
            android:layout_height="80dp"

            android:contentDescription="@string/descript_plan_edit"
            android:src="@drawable/plan_4" />

        <Button
            android:id="@+id/button_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:textSize="18sp"
            android:text="@string/label_plan_edit"
            android:background="@drawable/btn_shape"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_alignParentTop="true"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="390dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView_show"
            android:layout_width="80dp"
            android:layout_height="80dp"

            android:contentDescription="@string/descript_plan_show"
            android:src="@drawable/plan_3" />

        <Button
            android:id="@+id/button_show"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/label_plan_show"
            android:textSize="18sp"
            android:background="@drawable/btn_shape"/>
    </LinearLayout>






</RelativeLayout>
