<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

        <TextView
            android:id="@+id/plan_title_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="16sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/plan_content_edit"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_edit_edit"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_edit_edit"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_edit_delete"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_edit_delete"
                android:textSize="14sp" />
        </LinearLayout>

</LinearLayout>
